Try to fix layout shift

--- a/blocks/slider/slider.css
+++ b/blocks/slider/slider.css
@@ -12,12 +12,20 @@
   /* library element */
   .swiper {
     margin: 0 50px;
+    overflow: hidden;
+
+    /* wrapper */
+    .swiper-wrapper {
+      display: flex;
+    }
 
     /* one slide */
     .swiper-slide {
+      flex-shrink: 0;
       align-self: center;
 
       > div {
+        margin: 0 auto;
         display: flex;
         align-items: center;
         min-height: 60px;
@@ -29,7 +37,7 @@
 
   /* small slider */
   &.small {
-    .swiper > div {
+    .swiper-slide > div {
       max-width: 150px;
     }
   }
